# ClinAudit-Ai

./: .env  .gitignore  Dockerfile  check_env.py  docker-compose.yml  pyproject.toml  requirements.txt  test_multiagent.py  test_openai.py
.github/workflows/: deploy.yml
qdrant_data/: raft_state.json
qdrant_storage/: raft_state.json
qdrant_storage/collections/medicare_protocols/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/medicare_protocols/0/segments/9567fcc5-263a-4ca0-b274-eae48d0bda6a/: mutable_id_tracker.mappings
qdrant_storage/collections/medicare_protocols/0/segments/f12024ef-7eae-46d7-b5d5-8356a19cc3fb/: mutable_id_tracker.mappings
src/: app.py  initialize_qdrant.py  main.py
src/agents/: auditor.py  graph.py  nodes.py  researcher.py  rewriter.py  router.py  tavily_search.py  test_qdrant.py
src/agents/src/agents/: audit_hallucination.py  evaluate_rag.py  ingest_pubmed.py  setup_db.py
src/core/: metrics.py
src/database/: qdrant_client.py
src/ingestion/: conditioning.py  loaders.py  policy_loader.py  production_ingest.py
src/schemas/: custom_types.py  state.py
src/services/: vector_store.py
src/utils/: check_env.py  data_loader.py  evaluator.py  ingest.py  metrics.py  rate_limiter.py  run_app.sh  test_openai.py  vector_store.py
src/workflows/: graph.py  router.py  state.py
vscode/: settings.json
